Combined temp dfs intoone
I now need to combine both datasets joined on date, and then thats a solid step. Next I need to get a correlation matrix and chi square on this stuff to see correlation between wildfires and temp

--- a/wildfire_data_explore.ipynb
+++ b/wildfire_data_explore.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "[221183 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,48 +423,120 @@
    "source": [
     "# https://www.kaggle.com/datasets/avkashchauhan/california-wildfire-dataset-from-2000-2021?resource=download\n",
     "\n",
-    "import pandas as pd\n",
+    "import pandas\n",
+    "import sqlite3\n",
     "\n",
     "filepath = 'datasets\\wildfire_data\\ca_wildfires\\ca_daily_fire_2000_2021-v2.csv'\n",
     "data = pandas.read_csv(filepath)\n",
     "\n",
-    "data"
+    "data\n",
+    "# print(data.columns)\n",
+    "# data.drop(columns='Date', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\azaan\\AppData\\Local\\Temp\\ipykernel_33992\\531903386.py:1: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
-      "  data.mean()\n"
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'value_counts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\azaan\\OneDrive\\Documents\\GitHub\\Data-Nerds\\wildfire_data_explore.ipynb Cell 8\u001b[0m in \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/azaan/OneDrive/Documents/GitHub/Data-Nerds/wildfire_data_explore.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# scratch\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/azaan/OneDrive/Documents/GitHub/Data-Nerds/wildfire_data_explore.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mstr\u001b[39;49m(data1[\u001b[39m'\u001b[39;49m\u001b[39msatellite\u001b[39;49m\u001b[39m'\u001b[39;49m])\u001b[39m.\u001b[39;49mvalue_counts()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'value_counts'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "latitude        38.218017\n",
-       "longitude     -120.263418\n",
-       "frp            137.750609\n",
-       "type             0.010991\n",
-       "bright_t31     299.375297\n",
-       "confidence      83.162490\n",
-       "year          2012.581812\n",
-       "month            7.933978\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.mean()"
+    "# scratch\n",
+    "str(data1['satellite']).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MODIS    221183\n",
+      "Name: instrument, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['instrument'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "latitude      float64\n",
+      "longitude     float64\n",
+      "acq_date       object\n",
+      "satellite      object\n",
+      "instrument     object\n",
+      "frp           float64\n",
+      "type            int64\n",
+      "bright_t31    float64\n",
+      "confidence      int64\n",
+      "year            int64\n",
+      "month           int64\n",
+      "dtype: object\n",
+      "latitude             float64\n",
+      "longitude            float64\n",
+      "acq_date      datetime64[ns]\n",
+      "satellite              int64\n",
+      "instrument             int64\n",
+      "frp                  float64\n",
+      "type                   int64\n",
+      "bright_t31           float64\n",
+      "confidence             int64\n",
+      "year                   int64\n",
+      "month                  int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data1 = data.copy(deep=True)\n",
+    "print(data1.dtypes)\n",
+    "# convert date to date types\n",
+    "data1['acq_date'] = pd.to_datetime(data1['acq_date'])\n",
+    "# convert objects (categorical) into ordinal types\n",
+    "data1['satellite'] = data1['satellite'].map({'Terra': 1, 'Aqua': 2})\n",
+    "data1['instrument'] = data1['instrument'].map({'MODIS': 1, 'VIIRS':2})\n",
+    "\n",
+    "# drop unnecessary data columns\n",
+    "print(data1.dtypes)\n"
    ]
   },
   {
